
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef void* uint32_t ;
struct drm_plane_state {int crtc_x; int crtc_y; unsigned int crtc_w; unsigned int crtc_h; void* src_h; void* src_w; void* src_y; void* src_x; } ;
struct drm_plane {int dev; } ;
struct drm_modeset_acquire_ctx {int dummy; } ;
struct drm_framebuffer {int dummy; } ;
struct drm_crtc {struct drm_plane* cursor; } ;
struct drm_atomic_state {int legacy_cursor_update; struct drm_modeset_acquire_ctx* acquire_ctx; } ;


 int ENOMEM ;
 scalar_t__ IS_ERR (struct drm_plane_state*) ;
 int PTR_ERR (struct drm_plane_state*) ;
 int drm_atomic_commit (struct drm_atomic_state*) ;
 struct drm_plane_state* drm_atomic_get_plane_state (struct drm_atomic_state*,struct drm_plane*) ;
 int drm_atomic_set_crtc_for_plane (struct drm_plane_state*,struct drm_crtc*) ;
 int drm_atomic_set_fb_for_plane (struct drm_plane_state*,struct drm_framebuffer*) ;
 struct drm_atomic_state* drm_atomic_state_alloc (int ) ;
 int drm_atomic_state_put (struct drm_atomic_state*) ;

int drm_atomic_helper_update_plane(struct drm_plane *plane,
       struct drm_crtc *crtc,
       struct drm_framebuffer *fb,
       int crtc_x, int crtc_y,
       unsigned int crtc_w, unsigned int crtc_h,
       uint32_t src_x, uint32_t src_y,
       uint32_t src_w, uint32_t src_h,
       struct drm_modeset_acquire_ctx *ctx)
{
 struct drm_atomic_state *state;
 struct drm_plane_state *plane_state;
 int ret = 0;

 state = drm_atomic_state_alloc(plane->dev);
 if (!state)
  return -ENOMEM;

 state->acquire_ctx = ctx;
 plane_state = drm_atomic_get_plane_state(state, plane);
 if (IS_ERR(plane_state)) {
  ret = PTR_ERR(plane_state);
  goto fail;
 }

 ret = drm_atomic_set_crtc_for_plane(plane_state, crtc);
 if (ret != 0)
  goto fail;
 drm_atomic_set_fb_for_plane(plane_state, fb);
 plane_state->crtc_x = crtc_x;
 plane_state->crtc_y = crtc_y;
 plane_state->crtc_w = crtc_w;
 plane_state->crtc_h = crtc_h;
 plane_state->src_x = src_x;
 plane_state->src_y = src_y;
 plane_state->src_w = src_w;
 plane_state->src_h = src_h;

 if (plane == crtc->cursor)
  state->legacy_cursor_update = 1;

 ret = drm_atomic_commit(state);
fail:
 drm_atomic_state_put(state);
 return ret;
}
